ui div overlap fix

--- a/ui/public/style.css
+++ b/ui/public/style.css
@@ -1,10 +1,5 @@
 #app {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100vw;
-    height: 100vh;
-    z-index: 9999;
+
 }
 
 .close-thik:after {
